image-orientation: from-image to fix weird image rotation issues on mobile.

--- a/resources/sass/pages/_all-posts.scss
+++ b/resources/sass/pages/_all-posts.scss
@@ -73,6 +73,7 @@
 
         .post-media {
           width: 100%;
+          image-orientation: from-image;
           border-bottom: $border-thickness solid $border-color;
           margin: 0 auto;
           transition: all .3s ease;
